# realtime-orderbook-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: Phase1_Ingestion_and_Kafka.md  Phase2_Validation_and_Hot_Storage.md  Phase3_Observability_Prometheus_Grafana.md  Phase4_Cold_Storage_and_GX.md
infra/prometheus/: prometheus.yml
scripts/: init_db.sql
src/common/: config.py  metrics.py  models.py
src/data_audit/: audit_parquet.py
src/ingestion_service/: main.py  producer.py  simulator.py
src/quality_service/: main.py  parquet_writer.py  repository.py  validator.py
src/realtime_orderbook_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
