[project]
name = "realtime-orderbook-pipeline"
version = "0.1.0"
description = "Toy real-time orderbook pipeline: Phase 1 - ingestion + Kafka."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "aiokafka>=0.10.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"